frontend/tests/errors/ER-001/unclosed_brace/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Syntax errors are reported as compile-time errors | Syntax error: unclosed brace


&^main() -> #i32 {
    let x = 5;
    x
